# adios_oil_database

./: .buildinfo  .gitignore  .gitlab-ci.yml  .style.yapf  AD-Example-Record.json  EC-Example-Record.json  EX-Example-Record.json  README.md  build_standalone.py  computation.html  create_conda_env.py  docker_start.sh  dockerfile  genindex.html  index.html  ipy_init.py  managing.html  mongo_config_dev.yml  mongo_config_test.yml  objects.inv  overview.html  py-modindex.html  run_app.py  search.html  searchindex.js  standalone_conda_requirements.txt
adios_db/: NO00108  README.md  conda_requirements.txt  conda_requirements_optional.txt  conda_requirements_test.txt  config-example.ini  create_conda_env.py  docs_requirements.txt  dump.rdb  setup.cfg  setup.py  validation_by_error.md  validation_by_record.md
adios_db/adios_db/: __init__.py
adios_db/data/: ADIOS_data_template.xlsx  NOAA_Template_ChemTox_Excel_V4.1_20201104.xlsx  Oil Bulk Characteristics v.2.csv  Oil Bulk Characteristics v.2.xlsx  compounds_and_industry_properties.csv
adios_db/experiments/: API_back_calculate.ipynb  API_calculation.ipynb  ViscosityInterpolation.ipynb  density_interpolation.ipynb
adios_db/scripts/: ADIOS_Locations.csv  DistillationFraction.tsv  Emulsion_data_adios2.tsv  Evaluation_Of_Oil_Type_List_January2021.tsv  README.md  add_API.py  add_ESTS_method.py  add_alternate_names.py  add_bullwinkle_data_from_ADIOS2.py  add_ccme_method.py  add_density_from_API.py  add_distillation_type_from_ADIOS_data.py  add_fraction_recovered.py  add_gasoil_label.py  add_labels.py  add_location_coordinates.py  add_note_on_old_ests_records.py  add_product_types.py  adios_distillation_data.csv  dump_dist_fraction_recovered.py  example_query_script.py  extract_diesel_info.py  find_all_sara.py  find_bullwinkle_in_adios_data.py  fix_C_K_conversion.py  fix_exxon_bp_endpoints.py  fix_reid_vp_unittype.py  (+17 more)
(+1527 files in other folders)
