[metadata]
name = adios_db
long_description = file: README.md, LICENSE.txt
version = attr: adios_db.__version__
license = CC-0
long_description_content_type = text/markdown
author = ADIOS/GNOME team at NOAA ORR
author_email = orr.gnome@noaa.gov
keywords = adios, gnome, oilspill, weathering, modeling

classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    pynucos

[options.package_data]
* =
  models/oil/product_types_and_labels.csv
  test/test_models/test_oil/example_products.csv
  test/data_for_testing/example_data/**/*.json
  test/data_for_testing/noaa-oil-data/oil/**/*.json
  test/test_models/test_oil/output/empty_file

[options.entry_points]
console_scripts =
    adios_db_init = adios_db.scripts.db_initialize:init_db_cmd
    adios_db_import = adios_db.scripts.db_import:import_db_cmd
    adios_db_oil_query = adios_db.scripts.oil_query:oil_query_cmd
    adios_db_backup = adios_db.scripts.db_backup:backup_db_cmd
    adios_db_restore = adios_db.scripts.db_restore:restore_db_cmd
    adios_db_validate = adios_db.scripts.validate:main
    adios_db_update_test_data = adios_db.scripts.update_test_data:main
    adios_db_process_json = adios_db.scripts.process_json:run_through
    eccc_compare_oils = adios_db.scripts.eccc_compare_oils:compare_eccc_oils_cmd

